--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,33 @@
 </head>
 <body>
 
-  <header class="site-header">
-    <div class="container">
-      <h1 class="site-title">
-        <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
-      </h1>
-    </div>
-  </header>
+<header class="site-header">
+  <div class="container header-inner">
+
+    <h1 class="site-title">
+      <a href="{{ '/' | relative_url }}">Dani learns</a>
+    </h1>
+
+    <nav>
+      <ul class="nav">
+        <li class="nav-item">
+          <a href="{{ '/' | relative_url }}"
+             class="{% if page.url == '/' %}active{% endif %}">
+             Home
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="{{ '/about/' | relative_url }}"
+             class="{% if page.url contains '/about' %}active{% endif %}">
+             About
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+  </div>
+</header>
 
   {{ content }}
 
